deploy/kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kira-backend
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: kira-backend
  ports:
    - name: http
      port: 80
      targetPort: http
